--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,29 @@
 {
-    "name": "jwage/purl",
-    "type": "library",
-    "description": "URL Manipulation for PHP 5.3",
-    "keywords": ["url", "manipulation"],
-    "homepage": "http://github.com/jwage/purl",
-    "license": "MIT",
-    "authors": [
-        {"name": "Jonathan H. Wage", "email": "jonwage@gmail.com"}
-    ],
-    "autoload": {
-        "psr-0": {"Purl": "src/"}
-    },
-    "require": {
-    	"php": ">=5.3.0",
-        "jeremykendall/php-domain-parser": "1.3.1"
+  "name": "voku/purl",
+  "type": "library",
+  "description": "URL Manipulation for PHP 5.3",
+  "keywords": [
+    "url",
+    "manipulation"
+  ],
+  "homepage": "http://github.com/jwage/purl",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Jonathan H. Wage",
+      "email": "jonwage@gmail.com"
     }
+  ],
+  "autoload": {
+    "psr-0": {
+      "Purl": "src/"
+    }
+  },
+  "require": {
+    "php": ">=5.3.0",
+    "voku/php-domain-parser": "~5.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~4.0"
+  }
 }
