--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,4 +12,8 @@
             <directory suffix=".php">./src/Purl/</directory>
         </whitelist>
     </filter>
+
+    <logging>
+        <log type="coverage-clover" target="build/logs/clover.xml"/>
+    </logging>
 </phpunit>
