--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
   "name": "voku/purl",
   "type": "library",
-  "description": "URL Manipulation for PHP 5.3",
+  "description": "Purl is a simple Object Oriented URL manipulation library for PHP 5.3+ [Fork]",
   "keywords": [
     "url",
-    "manipulation"
+    "manipulation",
+    "URI",
   ],
   "homepage": "http://github.com/jwage/purl",
   "license": "MIT",
