[+]: fixed "composer.json"
-> don't try to code via phone (typos everywhere) :P

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "keywords": [
     "url",
     "manipulation",
-    "URI",
+    "URI"
   ],
   "homepage": "http://github.com/jwage/purl",
   "license": "MIT",
