--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,6 @@
     "voku/php-domain-parser": "~5.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.0"
+    "phpunit/phpunit": "~4.0|~5.0"
   }
 }
