--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,10 @@
     }
   },
   "require": {
-    "php": ">=5.3.0",
-    "voku/php-domain-parser": "~5.0"
+    "php": ">=7.0.0",
+    "voku/php-domain-parser": "~6.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.0|~5.0"
+    "phpunit/phpunit": "~6.0"
   }
 }
